--- a/app/index.html
+++ b/app/index.html
@@ -14,17 +14,17 @@
 </head>
 <body>
 	<header class="main-header clearfix">
-        <a href="#">
-        	<img class="logo" src="img/microsoft.png" alt="Microsoft">
+        <a class="logo" href="#">
+        	<img src="img/microsoft.png" alt="Microsoft">
     	</a>
         <nav class="main-menu">
         	<ul>
                 <li><a href="#">Магазин</a>
-                	<ul>
+                	<!-- <ul>
                 		<li><a href="#">Домашня сторінка Магазину</a></li>
                 		<li><a href="#">Office</a>
                 		<li><a href="#">Windows</a>
-            		</ul>
+            		</ul> -->
         		</li>
                 </li>
                 <li><a href="#">Продукти</a></li>
@@ -36,7 +36,7 @@
             	<input type="search" title="Пошук на веб-сайті Microsoft.com" name="q" placeholder="Пошук на веб-сайті Microsoft.com">
             	<button class="layout-left" type="submit" title="Пошук"></button>
         	</form>
-        	<div class="cart">
+        	<div class="cart clearfix">
 	        	<a href="#" title="Кошик">
 	        		<span>0</span>
 	    		</a>
@@ -118,7 +118,6 @@
             
         
         </header>
-	
 	<!-- build:js js/vendor.min.js --> 
 	<!-- bower:js -->
 	<script src="libs/jquery/dist/jquery.js"></script>
